--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-highlight-words": "^0.16.0",
-    "superagent": "^6.1.0"
+    "superagent": "^6.1.0",
+    "swr": "^0.3.5"
   },
   "devDependencies": {
     "@types/react": "^16.9.51",
