Convert less files to scss (#74)

--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@zeit/next-less": "^1.0.1",
-    "less": "^3.11.1",
     "next": "^10.0.0",
+    "normalize-scss": "^7.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-highlight-words": "^0.16.0",
+    "sass": "^1.28.0",
     "superagent": "^6.1.0",
     "swr": "^0.3.5"
   },
