--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@rooks/use-did-update": "^3.6.0",
+    "classnames": "^2.2.6",
     "next": "^10.0.0",
     "normalize-scss": "^7.0.1",
     "react": "^16.13.1",
