--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "baseUrl": "."
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "util/uniqBy.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "common/util/uniqBy.ts"],
   "exclude": ["node_modules"]
 }
