--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "competitions:update": "ts-node --project tsconfig.cli.json scripts/updateCompetitions.ts"
   },
   "dependencies": {
     "@rooks/use-did-update": "^3.6.0",
@@ -28,11 +29,14 @@
     "@types/superagent": "^4.1.10",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
+    "cli-ux": "^5.5.1",
+    "dotenv": "^8.2.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.3",
     "prettier": "^2.1.2",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
     "vercel": "^20.1.1"
   }
